# flink-job-manager-api

./: Makefile  README.md
.github/workflows/: python-publish.yml
flink-job-manager-api/: README.md  pyproject.toml
flink-job-manager-api/flink_job_manager_api/: __init__.py
flink-job-manager-api/flink_job_manager_api/models/: __init__.py  aggregated_metrics_response_body.py  aggregated_task_details_info.py  aggregated_task_details_info_metrics.py  aggregated_task_details_info_metrics_additional_property.py  aggregated_task_details_info_status_duration.py  aggregated_task_details_info_status_duration_additional_property.py  aggregation_mode.py  application_status.py  asynchronous_operation_info.py  asynchronous_operation_result.py  checkpoint_alignment.py  checkpoint_alignment_summary.py  checkpoint_config_info.py  checkpoint_duration.py  checkpoint_duration_summary.py  checkpoint_info.py  checkpoint_statistics_summary.py  checkpoint_stats_status.py  checkpoint_trigger_request_body.py  checkpoint_type.py  cluster_data_set_entry.py  cluster_data_set_list_response_body.py  cluster_overview_with_version.py  completed_subtask_checkpoint_statistics.py  configuration_info_entry.py  counts.py  dashboard_configuration.py  environment_info.py  exception_info.py  exception_info_failure_labels.py  execution_config_info.py  execution_config_info_user_config.py  execution_state.py  externalized_checkpoint_info.py  id.py  (+105 more)
flink-job-manager-api/tests/: test_async.py  test_sync.py
spec/: fetch_and_patch.sh  gen_config.yaml
spec/py/: pyproject.toml
spec/py/tests/: test_sync.py
(+68 files in other folders)
